# codex-memory

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/操作手册/: design-review-workflow.md
docs/计划文档/: 2026-07-04-codex-memory-plan.md
docs/设计文档/: 2026-07-04-memory-system-design.md
docs/调研文档/: 2026-07-04-memory-system-research.md
docs/项目日志/: 2026-07-04-memory-system.md
scripts/memory/: embed.py  main.py  main_add.txt  seg.py
scripts/memory/tests/: test_seg_module.py  test_task10_cron_config.py  test_task11_integration.py  test_task12_entity_belief_relation.py  test_task13_cjk_search.py  test_task1_schema.py  test_task2_add.py  test_task3_search.py  test_task4_delete_update.py  test_task5_evolve.py  test_task6_load_export_status.py  test_task7_vec_migrate.py  test_task8_cli.py  test_task9_auto_evolve.py
specs/: official-skill-diff.patch  self-evolving-memory-design.md
