[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codex-memory"
version = "0.1.0"
description = "Persistent, evolving memory for AI agents — SQLite-backed, zero-dependency, auto-evolution"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "HynUx", email = "SK.Hynux@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/HynUx/codex-memory"
Repository = "https://github.com/HynUx/codex-memory.git"

[project.scripts]
memory = "memory.main:main"

[tool.setuptools.packages.find]
where = ["scripts"]
namespaces = false

[tool.setuptools.package-dir]
memory = "scripts/memory"
